[package]
name = "noubeacon"
version = "0.1.0"
authors = ["Chad Baxter <cbaxter@mail.umw.edu>"]
edition = "2018"
publish = true
description = "A simple jammer for ultrasonic beacons from companies like SilverPush and Lisnr."
repository = "https://github.com/LogoiLab/noubeacon"
license = "GPL-3.0"
readme = "README.md"
keywords = ["Silverpush", "lisnr", "ultrasonic", "beacon", "jammer"]
categories = ["security", "privacy"]

[dependencies]
anyhow = "1.0.26"
cpal = "0.11.0"
